# IGUA-df

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docker.yml  test.yml
htgcf/: __main__.py  _manhattan.pyx  cli.py  mmseqs.py  seqio.py
htgcf/hca/: Cargo.toml  clustering.rs  distance.rs  lib.rs
igua/: __init__.py  _scratch.py  cli.py  cluster_extractor.py  defense_extractor.py  mmseqs.py  profiler.py  seqio.py
igua/hca/: Cargo.toml  lib.rs
notebooks/: how-to.ipynb
pkg/docker/: Dockerfile
pkg/singularity/: htgcf.def
tests/: test_output_regression.py  test_ref.py
tests/data/: ecoli_compositions.h5ad  ecoli_features.fa  ecoli_gcfs.tsv  emerge_compositions.h5ad  emerge_features.fa  emerge_gcfs.tsv  secretion_small_compositions.h5ad  secretion_small_features.fa  secretion_small_gcfs.tsv  secretion_systems_metadata_short.tsv  strains_metadata.tsv
tests/fixtures/: ecoli_compositions.h5ad  ecoli_features.fa  ecoli_gcfs.tsv  ecoli_gzip_input_metadata.tsv  ecoli_input_metadata.tsv  emerge_compositions.h5ad  emerge_gcfs.tsv  emerge_input_metadata_sample15.tsv  emerge_sample_15_metadata.tsv  secretion_small_compositions.h5ad  secretion_systems_input_metadata_sample.tsv
tests/regression/: test_output_regression.py  test_ref.py
