[metadata]
name = htgcf
version = attr: htgcf.__version__
author = Martin Larralde
author_email = martin.larralde@embl.de
url = https://github.com/althonos/htgcf
description = High-Throughput Gene Cluster Family clustering for metagenomic data. 
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
platform = any
keywords = bioinformatics, clusters, gene
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Typing :: Typed

[options]
zip_safe = false
packages =
    htgcf
    htgcf.hca
    htgcf.seqio
include_package_data = true
python_requires = >=3.6
install_requires =
    scipy ~=1.9
    gb-io ~=0.2.0
    rich ~=12.6
    numpy ~=1.23
    pandas ~=1.4
    anndata ~=0.8
setup_requires =
    setuptools >=46.4
    setuptools-rust ~=1.6
tests_require =
    importlib-resources ; python_version < '3.7'

[options.entry_points]
console_scripts =
    htgcf = htgcf.cli:main

[options.package_data]
htgcf = py.typed, *.pyi, *.pxd, *.pyx

[coverage:run]
plugins = Cython.Coverage

[coverage:report]
include = htgcf/*
omit = htgcf/tests/*
show_missing = true
exclude_lines =
    pragma: no cover
    if typing.TYPE_CHECKING:
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
    return NotImplemented
    raise MemoryError()
