[package]
name = "htgcf-hca"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "hca"
path = "lib.rs"

[dependencies.gb-io]
version = "0.7"
[dependencies.pyo3]
version = "0.21"
[dependencies.numpy]
version = "0.21"
features = ["half"]
[dependencies.rayon]
version = "1.7"
[dependencies.kodama]
version = "0.2"
[dependencies.num-traits]
version = "0.2.14"
[dependencies.half]
version = "2.2"
features = ["num-traits"]

[features]
extension-module = ["pyo3/extension-module"]
cpython = []
nightly = []
